stoat/src/snapshots/tui/stoat__test_harness__chat_replay_thinking_then_text_step_02_text.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: claude_message
focused: #1 of 1
mode: normal
size: 80x24
---
[0m[90mClaude[0m

















[0m[3m[90m~ Thinking... (3 lines)[0m

[0m[97mDone thinking.[0m
[0m[90m--------------------------------------------------------------------------------[0m
[0m[7m [0m
[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100m[claude]                                                        [0m
